--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "firebase-admin": "^12.5.0",
+        "next": "14.2.13",
+        "openai": "^4.63.0",
         "react": "^18",
         "react-dom": "^18",
-        "next": "14.2.13"
+        "twitter-api-v2": "^1.17.2"
     },
     "devDependencies": {
-        "typescript": "^5",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.13",
         "postcss": "^8",
         "tailwindcss": "^3.4.1",
-        "eslint": "^8",
-        "eslint-config-next": "14.2.13"
+        "typescript": "^5"
     }
 }
