--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,6 @@
         "esModuleInterop": true,
         "module": "esnext",
         "moduleResolution": "bundler",
-        "resolveJsonModule ": true,
         "isolatedModules": true,
         "jsx": "preserve",
         "incremental": true,
@@ -19,7 +18,8 @@
         ],
         "paths": {
             "@/*": ["./*"]
-        }
+        },
+        "resolveJsonModule": true
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
     "exclude": ["node_modules"]
