--- a/package.json
+++ b/package.json
@@ -9,12 +9,24 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@hookform/resolvers": "^3.9.0",
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-select": "^2.1.1",
+        "@radix-ui/react-slot": "^1.1.0",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
         "firebase-admin": "^12.5.0",
+        "lucide-react": "^0.445.0",
         "next": "14.2.13",
         "openai": "^4.63.0",
         "react": "^18",
         "react-dom": "^18",
-        "twitter-api-v2": "^1.17.2"
+        "react-hook-form": "^7.53.0",
+        "tailwind-merge": "^2.5.2",
+        "tailwindcss-animate": "^1.0.7",
+        "twitter-api-v2": "^1.17.2",
+        "zod": "^3.23.8"
     },
     "devDependencies": {
         "@types/node": "^20",
