--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
         "@hookform/resolvers": "^3.9.0",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-popover": "^1.1.1",
         "@radix-ui/react-select": "^2.1.1",
         "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-switch": "^1.1.0",
         "@radix-ui/react-toast": "^1.2.1",
         "@tanstack/react-query": "^5.56.2",
         "axios": "^1.7.7",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "date-fns": "^3.6.0",
         "firebase-admin": "^12.5.0",
         "lucide-react": "^0.445.0",
         "next": "14.2.13",
         "openai": "^4.63.0",
         "react": "^18",
+        "react-day-picker": "^9.1.2",
         "react-dom": "^18",
         "react-hook-form": "^7.53.0",
         "tailwind-merge": "^2.5.2",
