--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "date-fns": "^3.6.0",
         "firebase-admin": "^12.5.0",
         "lucide-react": "^0.445.0",
-        "next": "14.2.13",
+        "next": "^14.2.24",
         "openai": "^4.63.0",
         "react": "^18",
         "react-day-picker": "^9.1.2",
