--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
         "axios": "^1.7.7",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "cron-parser": "^5.4.0",
         "date-fns": "^3.6.0",
         "firebase-admin": "^12.5.0",
+        "inngest": "^3.44.5",
         "lucide-react": "^0.445.0",
         "next": "^14.2.24",
         "openai": "^4.63.0",
